# angular-application-builder-bazel

./: .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
